--- a/train_mask_detector.ipynb
+++ b/train_mask_detector.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# fetch dataset\n",
-    "DIRECTORY = r\"C:\\GitHub_New\\Covid-Precaution-System\\Covid-Precaution-System_v3\\dataset\"\n",
+    "DIRECTORY = r\"C:\\GitHub\\Covid-Precaution-System\\dataset\"\n",
     "CATEGORIES = [\"with_mask\", \"without_mask\"]"
    ]
   },
