--- a/train_mask_detector.ipynb
+++ b/train_mask_detector.ipynb
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kinja\\AppData\\Local\\Temp\\ipykernel_10160\\3390256123.py:2: UserWarning: `input_shape` is undefined or non-square, or `rows` is not in [96, 128, 160, 192, 224]. Weights for input shape (224, 224) will be loaded as the default.\n",
+      "C:\\Users\\ranger\\AppData\\Local\\Temp\\ipykernel_10160\\3390256123.py:2: UserWarning: `input_shape` is undefined or non-square, or `rows` is not in [96, 128, 160, 192, 224]. Weights for input shape (224, 224) will be loaded as the default.\n",
       "  baseModel = MobileNetV2(weights=\"imagenet\", include_top=False, input_tensor=Input(shape=(224, 224, 3)))\n"
      ]
     }
@@ -236,7 +236,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\kinja\\miniconda3\\envs\\new3\\lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:122: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "c:\\Users\\ranger\\miniconda3\\envs\\new3\\lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:122: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
       "  self._warn_if_super_not_called()\n"
      ]
     },
@@ -254,7 +254,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\kinja\\miniconda3\\envs\\new3\\lib\\contextlib.py:137: UserWarning: Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches. You may need to use the `.repeat()` function when building your dataset.\n",
+      "c:\\Users\\ranger\\miniconda3\\envs\\new3\\lib\\contextlib.py:137: UserWarning: Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches. You may need to use the `.repeat()` function when building your dataset.\n",
       "  self.gen.throw(typ, value, traceback)\n"
      ]
     },
